2013-06-02  David Engster  <deng@randomsample.de>

	* registry.el (initialize-instance, registry-lookup)
	(registry-lookup-breaks-before-lexbind, registry-lookup-secondary)
	(registry-lookup-secondary-value, registry-search, registry-delete)
	(registry-insert, registry-reindex, registry-size, registry-prune): Do
	not wrap methods in `eval-and-compile'.  This breaks due to latest
	changes in EIEIO (introduction of eieio-core.el).

2013-05-30  Glenn Morris  <rgm@gnu.org>

	* nnmail.el (nnmail-fancy-expiry-target):
	Also bind mail-dont-reply-to-names.

	* spam-stat.el (spam-stat-save):
	No need to tweak font-lock in temp buffers.

	* shr.el (shr-put-image): Silence compiler.

2013-05-29  Glenn Morris  <rgm@gnu.org>

	* gnus-ems.el (set-process-plist): Every supported Emacs has this.

	* gnus-group.el (gnus-sequence-of-unread-articles)
	(gnus-summary-add-mark, gnus-mark-article-as-read)
	(gnus-group-make-articles-read): Declare.

	* gnus-sum.el (gnus-parameter-list-identifier)
	(gnus-article-stop-animations, gnus-stop-downloads)
	(gnus-article-only-boring-p, article-goto-body)
	(gnus-flush-original-article-buffer, article-narrow-to-head)
	(gnus-article-hidden-text-p, gnus-delete-wash-type)
	(gnus-summary-save-in-pipe, gnus-article-show-summary): Declare.

	* gnus.el: No need to eval-and-compile autoloads.

	* gravatar.el (help-function-arglist): Autoload.

	* nnimap.el (gnus-refer-thread-use-nnir): Declare.

	* nnmail.el (nnmail-fancy-expiry-target): Maybe use mail-dont-reply-to.

	* spam.el: No need to load spam-report when compiling.
	No need to eval-and-compile autoloads.
	(spam-report-resend-to): Declare.
	(spam-report-resend-register-routine): Require 'spam-report.

2013-05-24  Julien Danjou  <julien@danjou.info>

	* sieve.el (sieve-setup-buffer): Fix default port value in sieve buffer
	setup.

2013-05-23  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (rmail-swap-buffers-maybe)
	(rmail-maybe-set-message-counters, rmail-count-new-messages)